# AIAssistantWithLiveKitMCP

./: .gitignore  DOCUMENTATION.md  Dockerfile  README.md  agent_mcp.py  agentwithtools.py  app.py  fly.toml  hello.py  pyproject.toml  requirements.txt  weather_mcp.py
