[project]
name = "aiassistantwithlivekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "onnxruntime<1.20 ; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "python-dotenv>=1.2.2",
]
